--- a/select.html
+++ b/select.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <title>吸毒人员信息系统</title>
+    <title>查询界面</title>
 
     <!-- Bootstrap core CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.0/dist/css/bootstrap.min.css"
@@ -39,14 +39,48 @@
         <a class="btn btn-outline-primary" href="#">用户注册</a>
     </div>
 <br><br><br>
-    <main role="main" class="inner cover footercontainer container" style="text-align: center;">
-        <h1 class="cover-heading">吸毒人员信息系统</h1>
-        <p class="lead">吸毒人员信息系统是一款独立的Web应用，用于记录吸毒人员的相关信息，是数字化的吸毒人员信息数据库。吸毒人员信息系统的数据由公安部定制的吸毒检测仪器提供，并以Web网站的形式为公安部内部人员提供吸毒人员信息查询接口，实现吸毒人员信息的数字化管理。</p>
-        <p class="lead">
-          <a href="#" class="btn btn-lg btn-primary">登录后使用</a>
-        </p>
-      </main>
-
+<form class="form-inline justify-content-md-center">
+    <input type="text" class="form-control mb-3 mr-sm-3" id="inlineFormInputName2" name="name" placeholder="姓名">
+  
+    
+    <div class="input-group mb-3 mr-sm-3">
+      <input type="text" class="form-control" id="inlineFormInputGroupUsername2" name="IDcard" placeholder="身份证号码">
+    </div>
+    &nbsp;&nbsp;&nbsp;
+    <button type="submit" class="btn btn-primary mb-3">查询</button>
+  </form><br/><br/>
+  <div class="container">
+  <table class="table table-striped">
+    <thead>
+      <tr>
+        <th scope="col">#</th>
+        <th scope="col">First</th>
+        <th scope="col">Last</th>
+        <th scope="col">Handle</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <th scope="row">1</th>
+        <td>Mark</td>
+        <td>Otto</td>
+        <td>@mdo</td>
+      </tr>
+      <tr>
+        <th scope="row">2</th>
+        <td>Jacob</td>
+        <td>Thornton</td>
+        <td>@fat</td>
+      </tr>
+      <tr>
+        <th scope="row">3</th>
+        <td>Larry</td>
+        <td>the Bird</td>
+        <td>@twitter</td>
+      </tr>
+    </tbody>
+  </table>
+  </div>
 
     <footer class="footer mt-auto py-3">
         <div class="footercontainer container">
